--- a/stylesheet_20150512.css
+++ b/stylesheet_20150512.css
@@ -1,58 +1,50 @@
-body{
+body {
 	position: relative;
 	margin: 8px 0px;
 }
-body.dark_back
-{
+
+body.dark_back {
 	background-color: #000000;	
 }
 
-body.light_back
-{
+body.light_back {
 	background-color: #ffffff;	
 }
 
-.body_copy
-{
+.body_copy {
 	display: block; 
 	margin-left: auto; margin-right: auto;	
 	text-align: center;
 }
 
-.a
-{
+.a {
 	color: #ffffff;
 	text-decoration: none;
 }
 
-.table
-{
+.table {
 	border: none; margin: none; padding: none;
 }
 
-.td
-{
+.td {
 	border: none; margin: none; padding: none;
 }
 
-.orange
-{
+.orange {
 	font-family: "futura-pt", Helvetica, Arial, sans-serif; 
 	font-size:15pt; font-weight:300; 
 	color:#f05f22;
 	text-align: center;
 }
 
-.pink
-{
+.pink {
 	font-family: "futura-pt", Helvetica, Arial, sans-serif; 
 	font-size:15pt; font-weight:300; 
 	color:#d018b6;
 	text-align: center;
 }
 
-.dark_gray
-{
+.dark_gray {
 	font-family: "futura-pt", Helvetica, Arial, sans-serif; 
 	font-size:14pt; font-weight:300; 
 	line-height:18pt; 
@@ -60,8 +52,7 @@ body.light_back
 	text-align: center;
 }
 
-.light_gray
-{
+.light_gray {
 	font-family: "futura-pt", Helvetica, Arial, sans-serif; 
 	font-size:14pt; font-weight:300; 
 	line-height:18pt; 
@@ -69,8 +60,7 @@ body.light_back
 	text-align: center;
 }
 
-.white
-{
+.white {
 	font-family: "futura-pt", Helvetica, Arial, sans-serif; 
 	font-size:14pt; font-weight:300; 
 	line-height:18pt; 
@@ -78,8 +68,7 @@ body.light_back
 	text-align: center;
 }
 
-.feature_text
-{
+.feature_text {
 	font-family: "futura-pt", Helvetica, Arial, sans-serif; 
 	font-size:14pt; font-weight:300; 
 	line-height:18pt; 
@@ -87,8 +76,7 @@ body.light_back
 	text-align: center;
 }
 
-.generic_text_container
-{
+.generic_text_container {
 	font-family: "futura-pt", Helvetica, Arial, sans-serif; 
 	font-size:10pt; font-weight:300; 
 	color:#808080;
@@ -101,20 +89,18 @@ body.light_back
 	margin-right: auto;	
 }
 
-.header{
+.header {
 	padding: 0 8px;
 }
 
-#header
-{
+#header {
 	display: block;
 	width: 960px;
 	top: 0px;
 	margin-left: auto; margin-right: auto;	
 }
 
-#identity
-{
+#identity {
 	display: block;
 	width: 120px; 
 	height: 100px; 
@@ -125,13 +111,11 @@ body.light_back
 	background-color: #000;
 }
 
-.light_back #identity
-{
+.light_back #identity {
 	background-color: #fff;
 }
 
-#header_line
-{
+#header_line {
 	display: block;
 	position: relative;
 	width: 960px;
@@ -142,16 +126,14 @@ body.light_back
 	z-index: -1;
 }
 
-.header_line
-{
+.header_line {
 	overflow: hidden;
 	position: relative;
 	margin: 0 auto;
 	max-width: 960px;
 }
 
-#welcome
-{
+#welcome {
 	display: block;
 	top: 120px;
 	z-index: 1;
@@ -160,16 +142,14 @@ body.light_back
 	padding: 0 10px;
 }
 
-#features
-{
+#features {
 	display: block;
 	max-width: 960px;
 	z-index: 2;
 	margin-left: auto; margin-right: auto;	
 }
 
-.feature_image
-{
+.feature_image {
 	display: block;
 	width: auto; 
 	height: auto;
@@ -178,16 +158,14 @@ body.light_back
 	margin-left: auto; margin-right: auto;	
 }
 
-.feature_text_cell
-{
+.feature_text_cell {
 	vertical-align: top;
 	max-width: 300px;
 	padding: 0px 15px;
 	margin: 0 auto;
 }
 
-#runway
-{
+#runway {
 	display: block;
 	margin-left: auto; 
 	margin-right: auto;	
@@ -195,8 +173,7 @@ body.light_back
 	position: relative;
 }
 
-#runway_image
-{
+#runway_image {
 	display: block;
 	position: absolute;
 	z-index: -1;
@@ -209,42 +186,36 @@ body.light_back
 	margin: 0 auto;
 }
 
-#app_store_area
-{
+#app_store_area {
 	display: block; 
 	width: 100%;
 	background-color: #ffffff;
 	padding: 0 20px;
 }
 
-#download_button
-{
+#download_button {
 	display: block;
 	width: 135px;
 	margin-left: auto; margin-right: auto;	
 }
 
-#download_image
-{
+#download_image {
 	display: block;
 	border: none;
 	width: 135px; height: 40px;
 }
 
-#screenshots
-{
+#screenshots {
 	display: block;
 	width: 870px;
 	margin-left: auto; margin-right: auto;	
 }
 
-.screenshot_cell
-{
+.screenshot_cell {
 	vertical-align: top;
 }
 
-.screenshot_image
-{
+.screenshot_image {
 	display: block;
 	border: 1px solid #cccccc;
 	width: 256px; height: 192px;
@@ -252,14 +223,12 @@ body.light_back
 }
 
 
-#email_form
-{
+#email_form {
 	max-width: 550px;
 	margin-left: auto; margin-right: auto;	
 }
 
-.form_field
-{
+.form_field {
 	font-family: "futura-pt", Helvetica, Arial, sans-serif; 
 	font-size:14pt; 
 	font-weight:300; 
@@ -274,8 +243,7 @@ body.light_back
 	margin: 0px 0px 15px;
 }
 
-.form_button
-{
+.form_button {
 	font-family: "futura-pt", Helvetica, Arial, sans-serif; 
 	font-size:14pt; font-weight:300; 
 	color:#ffffff;
@@ -284,47 +252,46 @@ body.light_back
 	margin: 10px 0px;
 }
 
-#footer_area
-{
+#footer_area {
 	bottom: -398px;
 }
 
-#footer_area, #footer_area_floating
-{
+#footer_area, #footer_area_floating {
 	display: block; position: absolute;
 	width: 100%;
 	background-image: url("images/1024x768_dark.png");
 	padding: 0 20px;
 }
 
-#social
-{
+#social {
 	display: block;
 	width: 310px;
 	margin-left: auto; margin-right: auto;	
 }
 
-.social_image
-{
+.social_image {
 	display: block;
 	border: 0px;
 	width: 40px; height: 40px;
 	margin: 0px 10px 10px;
 }
 
-.ipad-image {
-	max-width: 626px;
+.device-images {
+	max-width: 800px;
 	width: 100%;
 	height: auto;
 }
 
-.col-md-3, .col-sm-6, .col-xs-12
-{
+.container {
+	width: 100%;
+}
+
+.col-md-3, .col-sm-6, .col-xs-12 {
 	padding-left: 0px;
 	padding-right: 0px;
 }
 
-@media (max-width: 880px;){
+@media (max-width: 880px;) {
 	#screenshots {
 		display: none;
 	}
